[Fix] Overlap animate RWD.

--- a/src/scss/spotlight.scss
+++ b/src/scss/spotlight.scss
@@ -32,7 +32,7 @@
         flex-direction: column;
         width: $article-width / 2 + 10px;
         padding: 2rem;
-        margin: 4rem 0;
+        margin: 2rem 0;
         margin-left: -2rem;
         background-color: $white;
         box-sizing: border-box;
